--- a/wp-content/themes/soboa95ans/custom.scss
+++ b/wp-content/themes/soboa95ans/custom.scss
@@ -1,6 +1,11 @@
 $primary  : #204081;
 $secondary: #ec6c23; // Font faces
 
+div#page {
+    max-width: 390px;
+    margin   : 0;
+}
+
 @font-face {
     font-family: 'TextaProAlt-BlackIt';
     src        : url('fonts/textaproalt-blackit-webfont.woff2') format('woff2'),
@@ -125,6 +130,79 @@ body {
 
     &-medium {
         font-family: $font-gilroy-medium;
+    }
+}
+
+// Font faces
+@font-face {
+    font-family: 'Texta Alt';
+    src        : url('fonts/TextaAlt-BlackIt.woff2') format('woff2'),
+        url('fonts/TextaAlt-BlackIt.woff') format('woff');
+    font-weight : 900;
+    font-style  : italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Texta Alt Book';
+    src        : url('fonts/TextaAlt-BookIt.woff2') format('woff2'),
+        url('fonts/TextaAlt-BookIt.woff') format('woff');
+    font-weight : normal;
+    font-style  : italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Texta Alt';
+    src        : url('fonts/TextaAlt-ThintIt.woff2') format('woff2'),
+        url('fonts/TextaAlt-ThintIt.woff') format('woff');
+    font-weight : 100;
+    font-style  : italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Texta Alt It';
+    src        : url('fonts/TextaAlt-It.woff2') format('woff2'),
+        url('fonts/TextaAlt-It.woff') format('woff');
+    font-weight : normal;
+    font-style  : italic;
+    font-display: swap;
+}
+
+// Variables
+$font-texta: 'Texta Alt',
+sans-serif;
+$font-texta-book: 'Texta Alt Book',
+sans-serif;
+
+// Utilisation
+body {
+    font-family: $font-texta;
+}
+
+.texta {
+    &-black {
+        font-family: $font-texta;
+        font-weight: 900;
+        font-style : italic;
+    }
+
+    &-book {
+        font-family: $font-texta-book;
+        font-style : italic;
+    }
+
+    &-thin {
+        font-family: $font-texta;
+        font-weight: 100;
+        font-style : italic;
+    }
+
+    &-regular {
+        font-family: $font-texta;
+        font-weight: normal;
+        font-style : italic;
     }
 }
 
@@ -339,16 +417,18 @@ body {
 }
 
 .site-main {
-    padding-top: 2em;
+    padding-top: 25px;
 }
 
 //main swiiper 
 
 .entry-content {
-    height  : 100vh;
-    overflow: hidden;
-    margin  : 0em;
-    padding : 0em;
+    // height  : 100vh;
+    // overflow: hidden;
+    // margin  : 0em;
+    // padding : 0em;
+    display       : flex;
+    flex-direction: column;
 
     .swiper-container {
         height: 100vh;
@@ -360,37 +440,228 @@ body {
     }
 }
 
+.wp-block-group {
+    margin : 0;
+    padding: 0;
+}
+
+.wp-block-group__inner-container {
+    margin : 0;
+    padding: 0;
+}
+
 .entry-content {
+    >.wp-block-group {
+        margin : 0;
+        padding: 0;
+
+        +.wp-block-group {
+            margin-top: 0;
+        }
+    }
+}
+
+@mixin letitre {
+    font-family   : "TextaPro-Heavy";
+    margin        : 43px 35px 0px 35px;
+    font-size     : 32.6px;
+    line-height   : 27px;
+    font-weight   : 900;
+    font-stretch  : normal;
+    font-style    : normal;
+    line-height   : .86;
+    letter-spacing: normal;
+    text-align    : center;
+    color         : #fff;
+
+    strong {
+        color: #ec6c23
+    }
+}
+
+.entry-content {
+    .wp-block-gallery {
+        .swiper-container {
+            width  : 100%;
+            height : 100%;
+            padding: 20px;
+        }
+
+        .swiper-slide {
+            width : 45%;
+            cursor: pointer;
+
+            img {
+                width     : 100%;
+                height    : auto;
+                object-fit: cover;
+            }
+        }
+    }
+
     .wp-block-group {
 
-        height: 100vh;
+        //   height: 100vh;
+        &#nos95ans {
+            .wp-block-image {
+                &:nth-of-type(2) {
+                    // background: red;
+
+                    img {
+                        width: 146px !important;
+                    }
+                }
+            }
+
+            .wp-block-column {
+                width     : fit-content;
+                flex-basis: auto !important;
+
+                &:nth-of-type(1) {}
+            }
+
+
+            #mouff {
+                padding-top: 10px;
+                @include letitre;
+                font-size: 29.4px !important;
+            }
+
+            .wp-block-columns {
+                margin         : 25px auto 25px;
+                display        : flex;
+                align-items    : center !important;
+                column-gap     : 0;
+                justify-content: space-evenly;
+                max-width      : 315px;
+
+                img {
+                    width : 48px !important;
+                    height: auto !important;
+                }
+
+                p {
+                    font-family: 'Texta Alt It';
+
+                    font-weight: normal;
+                    color      : #fff;
+                    font-size  : 13px;
+                    display    : flex;
+                    align-items: center;
+                    margin     : 0;
+
+                    strong {
+                        color: $primary;
+                    }
+                }
+            }
+        }
+
+        &#soboadepuis95abs {
+            background: #fff;
+        }
+
+        &#gazellelomonda {
+            background: #f9f9f9;
+        }
+
+        &#gazellelanans {
+            background: #fff;
+        }
+
+        &#vimto {
+            background: #f5f5f5;
+        }
+
+        &#bieregazelle {
+            background: #fff;
+        }
+
+        &#retrospective {
+            background: #f9f9f9;
+        }
     }
 
     #intro {
-
-        background             : url(images/bg1.webp) no-repeat center center fixed;
+        background             : url(images/bg1.webp);
         -webkit-background-size: cover;
         -moz-background-size   : cover;
         -o-background-size     : cover;
         background-size        : cover;
+        padding-bottom         : 14px;
 
-    }
+        .wp-block-social-links {
+            /* background: red; */
+            max-width : 96px;
+            column-gap: 0;
+            margin    : 8px auto 8px auto;
+        }
 
-    p {
-
-        font-family   : 'TextaPro-Heavy';
-        font-size     : 86.1px;
-        font-weight   : 900;
-        font-stretch  : normal;
-        font-style    : normal;
-        line-height   : 0.86;
-        letter-spacing: normal;
-        text-align    : center;
-        color         : white;
-
-        strong {
-
-            color: #ec6c23;
+        #bottles {
+            img {
+                height: 60px !important;
+                width : auto !important;
+            }
         }
     }
+
+    #nos95ans {
+        background: $secondary;
+    }
+
+}
+
+#celebreavecnoous {
+
+    font-family   : 'TextaPro-Heavy';
+    margin        : 43px 35px 0px 35px;
+    font-size     : 32.6px;
+    line-height   : 27px;
+    font-weight   : 900;
+    font-stretch  : normal;
+    font-style    : normal;
+    line-height   : 0.86;
+    letter-spacing: normal;
+    text-align    : center;
+    color         : white;
+
+    strong {
+
+        color: #ec6c23;
+    }
+
+}
+
+.wp-block-video {
+    height    : 100vh;
+    max-height: 283px;
+    width     : 100%;
+    margin    : 0;
+
+    // video::-webkit-media-controls-panel {
+    //     background: rgba(0, 0, 0, 0.7);
+    // }
+
+    // video::-webkit-media-controls-timeline {
+    //     background: #fff;
+    // }
+
+    // video::-webkit-media-controls-current-time-display,
+    // video::-webkit-media-controls-time-remaining-display {
+    //     color: #fff;
+    // }
+
+    video {
+        width     : 100%;
+        height    : 100%;
+        object-fit: cover;
+    }
+}
+
+#bubble {
+    img {
+        max-width : 204px;
+        margin-top: 17px;
+    }
+
 }
