--- a/wp-content/themes/soboa95ans/custom.scss
+++ b/wp-content/themes/soboa95ans/custom.scss
@@ -2,8 +2,8 @@ $primary  : #204081;
 $secondary: #ec6c23; // Font faces
 
 div#page {
-    max-width: 390px;
-    margin   : 0;
+    margin  : 0 auto;
+    overflow: hidden;
 }
 
 @font-face {
@@ -177,9 +177,7 @@ $font-texta-book: 'Texta Alt Book',
 sans-serif;
 
 // Utilisation
-body {
-    font-family: $font-texta;
-}
+body {}
 
 .texta {
     &-black {
@@ -443,12 +441,15 @@ body {
 .wp-block-group {
     margin : 0;
     padding: 0;
+
+    .wp-block-group__inner-container {
+
+        max-width: 430px;
+        margin   : 0 auto;
+    }
 }
 
-.wp-block-group__inner-container {
-    margin : 0;
-    padding: 0;
-}
+
 
 .entry-content {
     >.wp-block-group {
@@ -477,6 +478,33 @@ body {
     strong {
         color: #ec6c23
     }
+}
+
+@mixin maxWidth ($margin) {
+    max-width: 86%;
+    margin   : $margin auto $margin auto;
+}
+
+@mixin boissonTitre($color) {
+    text-transform: uppercase;
+    font-family   : "Gilroy-Heavy";
+    font-size     : 30px;
+    font-stretch  : normal;
+    font-style    : normal;
+    line-height   : 1;
+    letter-spacing: normal;
+    text-align    : left;
+    color         : $color;
+
+}
+
+@mixin boissonTexte($color) {
+
+    text-align    : left;
+    font-family   : "Gotham-Medium";
+    font-size     : 10px;
+    letter-spacing: 0;
+    color         : $color;
 }
 
 .entry-content {
@@ -565,90 +593,77 @@ body {
         }
 
         &#soboadepuis95abs {
+            background     : url(images/generique.webp) no-repeat center 0 #3a7ac1;
+            background-size: contain;
+            padding-top    : 91%;
 
-
-            background-size        : cover;
-            background-position    : center;
-            -webkit-background-size: cover;
-            -moz-background-size   : cover;
-            -o-background-size     : cover;
-            background-size        : cover;
-            filter                 : progid:DXImageTransform.Microsoft.AlphaImageLoader(src='.myBackground.jpg', sizingMethod='scale');
-            -ms-filter             : "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='myBackground.jpg', sizingMethod='scale')";
-
-
-            #merdf {
-
-                p {
-                    font-family   : "Gilroy-Regular";
-                    font-size     : 8.2px;
-                    letter-spacing: -0.19px;
-                    color         : #fff;
-                }
-
-                h2 {
-                    text-transform: uppercase;
-                    font-family   : 'Gilroy-Bold';
-                    font-size     : 22.4px;
-                    font-stretch  : normal;
-                    font-style    : normal;
-                    line-height   : 22px;
-                    letter-spacing: normal;
-                    text-align    : center;
-                    color         : #fff;
-                }
+            .wp-block-group__inner-container {
+                margin: 0 auto;
             }
-        }
 
-        &#gazellelomonda {
-            background: #f9f9f9;
-        }
+            div#merdf {
+                max-width: 86%;
+                margin   : 0 auto;
+            }
 
-        &#gazellelanans {
-            background: #fff;
-        }
+            p {
+                text-align    : justify;
+                font-family   : "Gilroy-Regular";
+                font-size     : 13px;
+                letter-spacing: 0;
+                color         : white;
+                text-align    : justify;
+            }
 
-        &#vimto {
-            background: #f5f5f5;
-        }
+            h2 {
+                text-transform: uppercase;
+                font-family   : 'Gilroy-Bold';
+                font-size     : 22.4px;
+                font-stretch  : normal;
+                font-style    : normal;
+                line-height   : 22px;
+                letter-spacing: normal;
+                text-align    : center;
+                color         : #fff;
 
-        &#bieregazelle {
-            background: #fff;
-        }
-
-        &#retrospective {
-            background: #f9f9f9;
-        }
-    }
-
-    #intro {
-        background             : url(images/bg1.webp);
-        -webkit-background-size: cover;
-        -moz-background-size   : cover;
-        -o-background-size     : cover;
-        background-size        : cover;
-        padding-bottom         : 14px;
-
-        .wp-block-social-links {
-            /* background: red; */
-            max-width : 96px;
-            column-gap: 0;
-            margin    : 8px auto 8px auto;
-        }
-
-        #bottles {
-            img {
-                height: 60px !important;
-                width : auto !important;
             }
         }
     }
 
-    #nos95ans {
-        background: $secondary;
+    &#gazellelomonda {
+        background: #aac99e;
+
     }
 
 }
+
+#intro {
+    background             : url(images/bg1.webp);
+    -webkit-background-size: cover;
+    -moz-background-size   : cover;
+    -o-background-size     : cover;
+    background-size        : cover;
+    padding-bottom         : 14px;
+
+    .wp-block-social-links {
+        /* background: red; */
+        max-width : 96px;
+        column-gap: 0;
+        margin    : 8px auto 8px auto;
+    }
+
+    #bottles {
+        img {
+            height: 60px !important;
+            width : auto !important;
+        }
+    }
+}
+
+#nos95ans {
+    background: $secondary;
+}
+
 
 #celebreavecnoous {
 
@@ -703,4 +718,253 @@ body {
         margin-top: 17px;
     }
 
+}
+
+
+.wp-block-group {
+    h2#titresection {
+        animation: fadeInDown 1s;
+    }
+
+    p {
+        animation: fadeIn 1.5s;
+    }
+
+    #celebreavecnoous {
+        animation: fadeInUp 1s;
+    }
+
+    #bubblin {
+        animation: fadeInLeft 1s;
+    }
+
+    .wp-block-columns {
+        animation: fadeInRight 1s;
+    }
+}
+
+.wp-block-columns {
+    column-gap: 0;
+}
+
+div#gazellelomonda {
+    background: #aac99e;
+
+    #gazoua {
+        @include maxWidth(0);
+    }
+
+    h2#titresection {
+        @include boissonTitre(#000000);
+    }
+
+    p {
+        @include boissonTexte(#000000);
+        margin-bottom: 0em !important;
+
+    }
+}
+
+
+
+#gazellelanans {
+    background     : url(images/korolait.webp) no-repeat center 0 #f8e101;
+    background-size: contain;
+
+    h2 {
+        @include boissonTitre(#000000);
+    }
+
+    p {
+        &:nth-of-type(1) {
+            margin-bottom: 0em !important;
+
+            font-family: 'Gotham-Black' !important;
+        }
+
+        @include boissonTexte(#000000);
+        text-align   : justify !important;
+        margin-bottom: 0em !important;
+
+    }
+
+    .wp-block-columns {
+        margin-bottom: 0em !important;
+
+    }
+
+    #aurelie {
+        padding   : 1em 1em 0em 1em !important;
+        flex-basis: 44%;
+    }
+}
+
+.wp-block-video {
+    padding   : 1em;
+    background: black;
+
+    video {
+        border-radius        : 10px;
+        -webkit-border-radius: 10px;
+        -moz-border-radius   : 10px;
+        -ms-border-radius    : 10px;
+        -o-border-radius     : 10px;
+    }
+}
+
+#vimto {
+
+    background     : url(images/aurelie.webp) no-repeat center 0 #8d2d86;
+    background-size: contain;
+
+    .wp-block-columns {
+        margin-bottom : 0em !important;
+        padding-bottom: 0em !important;
+    }
+
+    h2 {
+        @include boissonTitre(#ffffff);
+    }
+
+    p {
+        &:nth-of-type(1) {
+
+            font-family: 'Gotham-Black' !important;
+        }
+
+        margin-bottom: 0em !important;
+
+        @include boissonTexte(#ffffff);
+        text-align: justify !important;
+    }
+
+    .wp-block-column {
+        &:nth-of-type(1) {
+            padding   : 1em 1em 0em 1em !important;
+            flex-basis: 44%;
+        }
+    }
+}
+
+#bieregazelle {
+    background     : url(images/biere.webp) no-repeat center 0 #f8e101;
+    background-size: cover;
+    padding-bottom : 1em;
+    height         : 100vh;
+
+    &::before {
+        content   : '';
+        position  : absolute;
+        top       : 0;
+        left      : 0;
+        width     : 100%;
+        height    : 100%;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0));
+    }
+
+
+    .wp-block-columns {
+        margin-top    : 62px !important;
+        margin-bottom : 0em !important;
+        padding-bottom: 0em !important;
+        @include maxWidth(0);
+        z-index : 15;
+        position: relative;
+
+        h2 {
+            @include boissonTitre(#f8e101);
+        }
+
+        p {
+            margin-bottom: 0em !important;
+
+            @include boissonTexte(#f8e101);
+            text-align: justify !important;
+        }
+    }
+}
+
+#retrospective {
+    background: #fbaf83;
+    padding   : 2em !important;
+
+    .wp-block-image {
+        padding-bottom: 1em;
+        position      : relative;
+        z-index       : 1;
+
+        &::after {
+            position       : absolute;
+            content        : "";
+            background     : url(images/ombre.jpg) no-repeat center -10px;
+            height         : 4.9em;
+            width          : 100%;
+            z-index        : 0;
+            bottom         : -60px;
+            background-size: contain;
+        }
+    }
+
+    .wp-block-group .wp-block-group__inner-container {}
+
+    h2 {
+        text-transform: uppercase;
+        font-family   : "Gilroy-Bold";
+        font-size     : 22.4px;
+        font-stretch  : normal;
+        font-style    : normal;
+        line-height   : 22px;
+        letter-spacing: normal;
+        text-align    : center;
+        color         : #214081;
+    }
+
+    p {
+
+        text-align    : justify;
+        font-family   : "Gilroy-Regular";
+        font-size     : 13px;
+        letter-spacing: 0;
+        color         : #214081;
+        text-align    : justify;
+        text-align    : justify !important;
+    }
+
+
+}
+
+#klm {
+    width    : 100%;
+    max-width: 1200px;
+    margin   : 0 auto;
+
+    figure {
+        width  : calc(33.333% - 10px);
+        margin : 0;
+        padding: 5px;
+
+        img {
+            width     : 100%;
+            height    : auto;
+            display   : block;
+            cursor    : pointer;
+            transition: opacity 0.3s;
+
+            &:hover {
+                opacity: 0.8;
+            }
+        }
+    }
+
+    @media (max-width: 768px) {
+        figure {
+            width: calc(50% - 10px);
+        }
+    }
+
+    @media (max-width: 480px) {
+        figure {
+            width: 100%;
+        }
+    }
 }
